--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "serde-diff"
 version = "0.4.1"
-authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>", "Philip Degarmo <aclysma@gmail.com>"]
+authors = [
+    "Karl Bergström <karl.anton.bergstrom@gmail.com>",
+    "Philip Degarmo <aclysma@gmail.com>",
+]
 readme = "README.md"
 exclude = ["examples/*"]
 license = "Apache-2.0 OR MIT"
@@ -17,10 +20,11 @@ maintenance = { status = "experimental" }
 
 [dependencies]
 serde-diff-derive = { version = "0.4.0", path = "serde-diff-derive" }
-serde =  { version = "1", features = [ "derive" ] }
-serde_derive = { version = "1", features = ["deserialize_in_place"]}
+serde = { version = "1", features = ["derive"] }
+serde_derive = { version = "1", features = ["deserialize_in_place"] }
 
 [dev-dependencies]
 serde_json = "1.0"
 bincode = "1.2"
 rmp-serde = "0.15.0"
+maplit = "1.0.2"
